<resources>
    <string name="app_name">Ruviuz</string>
    <string name="flatAsk">Flat Roof</string>
    <string name="matAsk">Premium Materials</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="address">Address</string>
    <string name="postal_code">Postal Code</string>
    <string name="set_address">Set Address</string>
    <string name="tools">Tools</string>
    <string name="geolocation">Get Location</string>
    <string name="roofs">Roofs</string>
    <string name="actionlist">Action List</string>
    <string name="updated">Updated!</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="draft">Draft</string>
    <string name="send">Save</string>
    <string name="_0_00000">0.00000</string>
    <string name="ruvhomephoto">Photo of home for roofing quote</string>
    <string name="city">City</string>
    <string name="province">Province</string>
    <string name="clear">Clear</string>
    <string name="update">Update</string>
    <string name="upload">Upload</string>
    <string name="take_pic">Take Pic</string>


    <string name="measure">Measure</string>
    <string name="width">Width</string>
    <string name="top_width">Top Width</string>
    <string name="length">Length</string>
    <string name="slope">Slope</string>
    <string name="metrics">METRICS</string>
    <string name="side_menu">Side Menu</string>
    <string name="menu">Menu</string>
    <string name="ruuvmenu">RuuvMenu</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="OpenDrawer">Open Side Menu</string>
    <string name="CloseDrawer">Close Side Menu</string>
    <string name="zero">0</string>
    <string name="getvalue">Get Value</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="submit">Submit</string>
    <string name="phone_number">Phone Number</string>
    <string name="angle_symbol">∡</string>
    <string name="degree_symbol">°</string>
    <string name="ft">ft</string>
    <string name="inches">in</string>
    <string name="set_value">Set Value</string>
    <string name="client_info">Client info</string>
    <string name="ready">Ready</string>

    <string-array name="ruvitems">
        <item>Roof List</item>
        <item>Measure</item>
        <item>Client</item>
        <item>Address</item>
        <item>Get Location</item>
        <item>Upload</item>
        <item>Take Photo</item>
        <item>Clear</item>
        <item>Login</item>
        <item>Logout</item>
    </string-array>

    <string-array name="actionnames">
        <item>stronglogic.ruviuz.RviewActivity</item>
        <item>Metric</item>
        <item>customerDialog</item>
        <item>addressDialog</item>
        <item>Location</item>
        <item>Upload</item>
        <item>stronglogic.ruviuz.CameraActivity</item>
        <item>Clear</item>
        <item>Login</item>
        <item>Logout</item>
    </string-array>


    <string-array name="ruvItemsWithIcons">
        <item>Ruuv Quotes</item>
        <item>@drawable/geolocate</item>
        <item>@drawable/metric</item>
        <item>@drawable/login2</item>
        <item>Logout</item>
    </string-array>


    <string-array name="prefixTypes">
        <item>Mr.</item>
        <item>Ms.</item>
        <item>Mrs.</item>
    </string-array>

    <string-array name="priceRanges">
        <item>Under $500</item>
        <item>$500 - $1500</item>
        <item>$1500 - $3500</item>
        <item>$3500 - $1500</item>
        <item>$500 - $1500</item>
        <item>$500 - $1500</item>]
    </string-array>

    <string-array name="roofMaterials">
        <item>Standard</item>
        <item>Premium</item>
        <item>Aluminum</item>
        <item>Standing Seam</item>
        <item>PVC 50</item>
        <item>TPO 45</item>
        <item>EPDM</item>
        <item>Tar Gravel BUR</item>
    </string-array>

    <string-array name="sectionTypes">
        <item>Hip:Square</item>
        <item>Hip:Rectangular</item>
        <item>Gable</item>
        <item>Mansard</item>
        <item>Lean-to-Roof</item>
    </string-array>

    <string name="create_new_quote">Create New Quote</string>
    <string name="see_quotes">See Existing Quotes</string>
    <string name="ruviuz_welcome">Welcome To Ruviuz</string>
    <string name="admin_ui">Admin UI</string>
    <string name="no_price">$0.00</string>
    <string name="calculate">Calculate</string>
    <string name="create_account">Create Account</string>
    <string name="ruv_action">Ruviuz Actions</string>
    <string name="slope_measure">Measure Slope</string>
    <string name="current_value">Current Value</string>
    <string name="start">Start</string>
    <string name="set_values">Set your values</string>
    <string name="street">Street</string>
    <string name="overview">Quote Overview</string>
    <string name="enter_address">Enter Address</string>
    <string name="mrs">Mrs.</string>
    <string name="mr">Mr.</string>
    <string name="ms">Ms.</string>
    <string name="search">Search</string>
    <string name="name">Name</string>
    <string name="contact_info">Contact Info</string>
    <string name="dimensions">Dimensions</string>
    <string name="contact">Contact</string>
    <string name="typetoggle">typeToggle</string>
    <string name="phone">Phone</string>
    <string name="edit">Edit</string>
    <string name="material">Material</string>
    <string name="prefix">Prefix</string>
    <string name="price">Price</string>
    <string name="editing_mode">Editing Mode</string>
    <string name="edit_mode">Edit Mode</string>
    <string name="attach">Attach</string>
    <string name="okay">Okay</string>
    <string name="delete">Delete</string>
    <string name="set_main">Set Main</string>
    <string name="comment">Comment</string>
    <string name="cancel">Cancel</string>
    <string name="add_images">Add Images</string>
    <string name="done">Done</string>
    <string name="enter_comment">Enter Comment..</string>
    <string name="customer">Customer</string>

    <string name="title_activity_section">SectionActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="addsection">Add A Section</string>
    <string name="full">Full</string>
    <string name="empty_length">Empty Length</string>
    <string name="empty_width">Empty Width</string>
    <string name="e_len">E.Length</string>
    <string name="e_wid">E.Width</string>
    <string name="id">ID</string>
    <string name="area">Area</string>
    <string name="empty">Empty</string>
    <string name="section">Section</string>
    <string name="chimney">Chimney</string>
    <string name="skylight">Skylight</string>
    <string name="other">Other</string>
    <string name="type">Type</string>
    <string name="lng">Lng</string>
    <string name="e_lng">E.Lng</string>
    <string name="lgt">Lgt</string>
    <string name="wdt">Wdt</string>
    <string name="theta">θ</string>
    <string name="ft_squared">ft2</string>
    <string name="sections">Sections</string>
    <string name="mansard">Mansard</string>
    <string name="gable">Gable</string>
    <string name="rectangular_hip">Rect. Hip</string>
    <string name="square_hip">Square Hip</string>
    <string name="measure_sections">Measure Sections</string>
    <string name="measure_empty">Measure Empty Area</string>
    <string name="twidth">TWidth</string>
    <string name="section_type">Section Type</string>
    <string name="floors">Floors</string>
    <string name="property_info">Property Info</string>
    <string name="prep_requirement">Preparation Requirements</string>
    <string name="high">High</string>
    <string name="moderate">Moderate</string>
    <string name="none">None</string>
    <string name="client">Client</string>
    <string name="property">Property</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_account">Register</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register">Register</string>


</resources>
