<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ruviuz="http://schemas.android.com/apk/res-auto"
    >

    <item android:id="@+id/search"
        android:title="@string/search"
        ruviuz:showAsAction="always"
        ruviuz:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@android:drawable/ic_menu_search" />

    <item
        android:id="@+id/actionType"
            android:title="@string/typetoggle"
        android:icon="@drawable/destroy"
        ruviuz:showAsAction="always" />
    <item
        android:id="@+id/goHome"
        ruviuz:showAsAction="never"
        android:icon="@drawable/home32"
        android:title="@string/start" />
    <item
        android:id="@+id/loginAction"
        ruviuz:showAsAction="never"
        android:icon="@drawable/login2"
        android:title="@string/login"/>
    <item
        android:id="@+id/geoLocate"
        ruviuz:showAsAction="never"
        android:icon="@drawable/geolocate"
        android:title="@string/geolocation"/>

    <item
        android:id="@+id/currentQuote"
        android:title="Current Quote">
        <menu>
            <item android:title="@string/measure"
                android:icon="@drawable/metric"/>
            <item android:title="Client"
                android:icon="@drawable/client"/>
            <item android:title="@string/address"
                android:icon="@drawable/address"/>
            <item android:title="Get Location"
                android:icon="@drawable/geolocate"/>
            <item android:title="Upload File"
                android:icon="@drawable/getimg"/>
            <item android:title="@string/take_pic"
                android:icon="@android:drawable/ic_menu_camera"/>
            <item android:title="@string/clear"
                android:icon="@drawable/destroy"/>
        </menu>
    </item>
</menu>