<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ruviuz="http://schemas.android.com/apk/res-auto"
    android:icon="@drawable/rlogo">
    <item android:id="@+id/roofView"
        android:title="@string/roofs"
        android:text="@string/login"
        ruviuz:showAsAction="ifRoom" />
    <!--<item-->
        <!--android:id="@+id/ActionList"-->
        <!--android:title="@string/actionlist"-->
        <!--android:icon="@drawable/actions"-->
        <!--android:showAsAction="always">-->
            <item
                android:id="@+id/loginAction"
                ruviuz:showAsAction="never"
                android:icon="@drawable/login2"
                android:title="@string/login"/>
            <item
                android:id="@+id/geoLocate"
                ruviuz:showAsAction="never"
                android:icon="@drawable/geolocate"
                android:title="@string/geolocation"/>
</menu>