<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    android:minHeight="25dp"
    android:maxHeight="320dp"
    android:descendantFocusability="blocksDescendants"
    android:background="@color/common_google_signin_btn_text_dark_disabled"
    android:id="@+id/sectionRow">
    <TextView
        android:layout_width="48dp"
        android:layout_height="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_margin="4dp"
        android:id="@+id/idLabel"
        android:text="@string/section"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_toEndOf="@id/idLabel"
        android:layout_alignParentTop="true"
        android:layout_margin="4dp"
        android:id="@+id/sectionId"/>
    <TextView
        android:layout_width="48dp"
        android:layout_height="20dp"
        android:layout_margin="4dp"
        android:id="@+id/typeLabel"
        android:text="@string/type"
        android:layout_below="@id/sectionId"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_margin="4dp"
        android:layout_toEndOf="@id/typeLabel"
        android:layout_below="@id/sectionId"
        android:id="@+id/sectionType"/>

    <TextView
        android:layout_width="48dp"
        android:layout_height="20dp"
        android:layout_margin="4dp"
        android:id="@+id/lengthLabel"
        android:text="@string/length"
        android:layout_below="@id/typeLabel"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_margin="4dp"
        android:layout_toEndOf="@id/lengthLabel"
        android:layout_below="@id/typeLabel"
        android:id="@+id/sectionLength"/>
    <TextView
        android:layout_width="24dp"
        android:layout_height="20dp"
        android:layout_margin="4dp"
        android:layout_below="@id/typeLabel"
        android:layout_toEndOf="@id/sectionLength"
        android:text="@string/ft"
        />
    <TextView
        android:layout_width="48dp"
        android:layout_height="20dp"
        android:layout_margin="4dp"
        android:text="@string/width"
        android:layout_below="@id/sectionLength"
        android:id="@+id/widthLabel"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_margin="4dp"
        android:layout_toEndOf="@id/widthLabel"
        android:layout_below="@id/sectionLength"
        android:id="@+id/sectionWidth"/>

    <TextView
        android:layout_width="24dp"
        android:layout_height="20dp"
        android:layout_margin="4dp"
        android:layout_below="@id/sectionLength"
        android:layout_toEndOf="@id/sectionWidth"
        android:text="@string/ft"
        />

    <TextView
        android:layout_width="48dp"
        android:layout_height="20dp"
        android:layout_margin="4dp"
        android:text="@string/width"
        android:layout_below="@id/sectionWidth"
        android:id="@+id/topWidthLabel"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_margin="4dp"
        android:layout_toEndOf="@id/topWidthLabel"
        android:layout_below="@id/sectionWidth"
        android:id="@+id/sectionTopWidth"/>

    <TextView
        android:layout_width="24dp"
        android:layout_height="20dp"
        android:layout_margin="4dp"
        android:layout_below="@id/sectionWidth"
        android:layout_toEndOf="@id/sectionTopWidth"
        android:text="@string/ft"
        />

    <TextView
        android:layout_width="48dp"
        android:layout_height="20dp"
        android:layout_margin="4dp"
        android:text="@string/slope"
        android:layout_below="@id/topWidthLabel"
        android:id="@+id/slopeLabel"/>

    <TextView
        android:layout_width="24dp"
        android:layout_height="20dp"
        android:layout_margin="4dp"
        android:layout_below="@id/topWidthLabel"
        android:layout_toEndOf="@id/slopeLabel"
        android:id="@+id/theta"
        android:text="@string/theta"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_margin="4dp"
        android:layout_toEndOf="@id/theta"
        android:layout_below="@id/topWidthLabel"
        android:id="@+id/sectionSlope"/>

    <TextView
        android:layout_width="24dp"
        android:layout_height="20dp"
        android:layout_margin="4dp"
        android:layout_below="@id/topWidthLabel"
        android:layout_toEndOf="@id/sectionSlope"
        android:text="@string/degree_symbol"
        />




    <TextView
        android:layout_width="48dp"
        android:layout_height="20dp"
        android:layout_margin="4dp"
        android:layout_below="@id/sectionSlope"
        android:id="@+id/areaLabel"
        android:text="@string/area"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_margin="4dp"
        android:layout_toEndOf="@id/areaLabel"
        android:layout_below="@id/sectionSlope"
        android:id="@+id/sectionArea"/>

    <TextView
        android:layout_width="24dp"
        android:layout_height="20dp"
        android:layout_margin="4dp"
        android:layout_below="@id/sectionSlope"
        android:layout_toEndOf="@id/sectionArea"
        android:text="@string/ft_squared"
        />

    <TextView
        android:layout_width="48dp"
        android:layout_height="20dp"
        android:layout_margin="4dp"
        android:layout_below="@id/sectionArea"
        android:id="@+id/emptyLabel"
        android:text="@string/empty"
        android:visibility="gone"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_margin="4dp"
        android:layout_toEndOf="@id/areaLabel"
        android:layout_below="@id/sectionArea"
        android:visibility="gone"
        android:id="@+id/emptyArea"/>

    <TextView
        android:layout_width="24dp"
        android:layout_height="20dp"
        android:layout_margin="4dp"
        android:layout_below="@id/sectionArea"
        android:layout_toEndOf="@id/emptyArea"
        android:text="@string/ft_squared"
        android:id="@+id/emptFt2"
        android:visibility="gone"
        />

    <TextView
        android:layout_width="48dp"
        android:layout_height="20dp"
        android:layout_margin="4dp"
        android:layout_below="@id/emptyLabel"
        android:id="@+id/emptyTypeLabel"
        android:text="@string/type"
        android:visibility="gone"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_margin="4dp"
        android:layout_toEndOf="@id/emptyTypeLabel"
        android:layout_below="@id/emptyLabel"
        android:visibility="gone"
        android:id="@+id/emptyType"/>


</RelativeLayout>