<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorRow"
    style="@style/RuvFullFrag"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="stronglogic.ruviuz.fragments.SlopeFragment">

    <android.support.v7.widget.Toolbar
        android:id="@+id/ruvFragToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/RuvFragActionBar"
        app:popupTheme="@style/RuvFragActionBar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textAlignment="center"

        android:layout_below="@id/ruvFragToolbar"
        android:layout_marginTop="48dp"
        android:id="@+id/propertyTitle"
        android:text="@string/property_info"
        android:textColor="#000"/>

    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:id="@+id/navBtnWrap">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/backBtn"
            android:background="@drawable/ic_keyboard_arrow_left_black_24dp"
            android:text="@string/previous"
            android:textColor="#000"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="24dp"
            android:layout_alignParentBottom="true"
            android:paddingTop="54dp"
            android:layout_alignParentStart="false" />



        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fwrdBtn"
            android:background="@drawable/ic_keyboard_arrow_right_black_24dp"
            android:text="@string/next"
            android:textColor="#000"
            android:layout_marginEnd="24dp"
            android:paddingTop="54dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="16dp" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_above="@id/navBtnWrap"
        android:layout_below="@id/propertyTitle"
        android:layout_marginTop="48dp"
        android:background="@color/colorRow">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:id="@+id/matLabel"
            android:text="@string/material"
            android:layout_alignParentTop="true"
            android:textSize="18sp"
            />




        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/floors"
            android:layout_marginTop="72dp"
            android:layout_marginStart="16dp"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:layout_below="@id/matLabel"
            android:layout_alignParentStart="true"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="32dp"
            android:layout_below="@+id/matLabel"
            android:layout_centerInParent="true"
            android:id="@+id/flrPickWrap">
        <View
            android:id="@+id/pickTop"
            android:layout_width="96dp"
            android:layout_height="1dp"
            android:background="#000000" />

            <ImageButton
                android:id="@+id/floorUp"
                android:layout_gravity="center_horizontal"
                android:layout_width="96dp"
                android:layout_height="32dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:scaleX="0.6"
                android:scaleY="0.6"
                android:background="@drawable/ruvbtn_clr"
                android:src="@drawable/uparrow" />

            <biz.kasual.materialnumberpicker.MaterialNumberPicker
                android:layout_width="96dp"
                android:layout_height="48dp"
                android:id="@+id/floorPicker"
                app:npMinValue="1"
                app:npMaxValue="25"
                app:npDefaultValue="2"
                app:npBackgroundColor="@color/ruvGreen"
                app:npSeparatorColor="@color/ruvGreenStatus"
                app:npTextColor="#000"
                app:npTextSize="16sp"/>

            <ImageButton
                android:id="@+id/floorDown"
                android:layout_gravity="center_horizontal"
                android:layout_width="96dp"
                android:layout_height="32dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:scaleX="0.6"
                android:scaleY="0.6"
                android:background="@drawable/ruvbtn_clr"
                android:src="@drawable/downarrow" />

            <View
                android:id="@+id/pickBtm"
                android:layout_width="96dp"
                android:layout_height="1dp"
                android:background="#000000" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginStart="16dp"
            android:id="@+id/cleanTitle"
            android:text="@string/prep_requirement"
            android:layout_below="@+id/flrPickWrap"
            android:textSize="18sp"
            />
        <ImageView
            android:layout_width="256dp"
            android:layout_height="256dp"
            android:layout_below="@id/flrPickWrap"
            android:layout_centerHorizontal="true"
            android:id="@+id/ruvMan"/>

        <RadioGroup
            android:id="@+id/rdyGroup"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/cleanTitle"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/noneBtn"
                android:layout_width="108dp"
                android:layout_height="36dp"
                android:layout_gravity="start"
                android:layout_margin="0dp"
                android:background="@drawable/mat_tab"
                android:text="@string/none"
                android:button="@null"
                android:checked="true"
                android:gravity="center" />

            <RadioButton
                android:id="@+id/moderateBtn"
                android:layout_width="108dp"
                android:layout_height="36dp"
                android:layout_margin="0dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/moderate"
                android:background="@drawable/mat_tab"
                android:button="@null"
                android:gravity="center" />

            <RadioButton
                android:id="@+id/highBtn"
                android:layout_width="108dp"
                android:layout_height="36dp"
                android:layout_margin="0dp"
                android:layout_gravity="end"
                android:text="@string/high"
                android:background="@drawable/mat_tab"
                android:button="@null"
                android:gravity="center" />

        </RadioGroup>

    </RelativeLayout>

</RelativeLayout>