<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/searchDialog"
    android:orientation="vertical"
    style="@style/RuvFullFrag"
    tools:context="stronglogic.ruviuz.fragments.LoginFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/emptUi"
        android:orientation="vertical"
        android:background="@color/ruvGreenAccent"
        >

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_widthPercent="100%"
            android:id="@+id/emptyType"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp">
            <RadioButton android:id="@+id/chimney"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/ruvGreen"
                android:text="@string/chimney"
                />
            <RadioButton android:id="@+id/skylight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/ruvGreen"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:text="@string/skylight"
                />
            <RadioButton android:id="@+id/emptyOther"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/ruvGreen"
                android:text="@string/other"
                />
        </RadioGroup>
    </RelativeLayout>

</LinearLayout>
