<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/loginFragment"
    android:background="@color/material_blue_grey_800"
    android:orientation="vertical"
    style="@style/RuvFullFrag"
    tools:context="stronglogic.ruviuz.fragments.LoginFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginUI"
        android:orientation="vertical"
        android:background="@color/material_blue_grey_800">
        <EditText
            android:layout_width="320dp"
            android:layout_height="38dp"
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:layout_gravity="center_vertical"
            android:hint="@string/email"
            android:selectAllOnFocus="true"
            android:gravity="center"
            android:background="#fff"
            android:layout_marginTop="1.5dp"
            android:layout_marginBottom="1dp"/>
        <EditText
            android:layout_width="320dp"
            android:layout_height="38dp"
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_gravity="center_vertical"
            android:hint="@string/password"
            android:selectAllOnFocus="true"
            android:gravity="center"
            android:background="#fff"
            android:layout_marginBottom="1dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:hint="@string/login"
            android:id="@+id/loginBtn"
            style="?android:attr/buttonStyleSmall"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/ruvbtn_bl"
            android:textColorHint="#fff"
            android:textSize="24sp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1.5dp"
            />
    </LinearLayout>

</LinearLayout>
